# ChangeLog for dev-util/bzrtools
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/bzrtools/ChangeLog,v 1.52 2009/02/20 19:14:27 fauli Exp $

  20 Feb 2009; Christian Faulhammer <fauli@gentoo.org>
  bzrtools-1.12.0.ebuild:
  add explicit RDEPEND to quiten repoman

  20 Feb 2009; Christian Faulhammer <fauli@gentoo.org>
  bzrtools-1.12.0.ebuild:
  fix HOMEPAGE

*bzrtools-1.12.0 (11 Feb 2009)

  11 Feb 2009; Peter Volkov <pva@gentoo.org> +bzrtools-1.12.0.ebuild:
  Version bump.

  08 Feb 2009; Christian Faulhammer <fauli@gentoo.org> metadata.xml:
  add myself as maintainer

*bzrtools-1.11.0 (12 Jan 2009)

  12 Jan 2009; Peter Volkov <pva@gentoo.org> +bzrtools-1.11.0.ebuild:
  Version bump.

  10 Jan 2009; Peter Volkov <pva@gentoo.org> -bzrtools-1.5.0.ebuild,
  -bzrtools-1.6.0.ebuild, -bzrtools-1.7.0.ebuild, -bzrtools-1.8.0.ebuild:
  Clean old.

  10 Jan 2009; Friedrich Oslage <bluebird@gentoo.org> bzrtools-1.9.1.ebuild:
  Stable on sparc, bug #252656

  03 Jan 2009; nixnut <nixnut@gentoo.org> bzrtools-1.9.1.ebuild:
  ppc stable #252656

  31 Dec 2008; Raúl Porcel <armin76@gentoo.org> bzrtools-1.9.1.ebuild:
  x86 stable wrt #252656

  28 Dec 2008; Jeremy Olexa <darkside@gentoo.org> bzrtools-1.9.1.ebuild:
  amd64 stable, bug 252656

*bzrtools-1.10.0 (29 Nov 2008)

  29 Nov 2008; Peter Volkov <pva@gentoo.org> +bzrtools-1.10.0.ebuild:
  Version bump.

*bzrtools-1.9.1 (05 Nov 2008)

  05 Nov 2008; Peter Volkov <pva@gentoo.org> -bzrtools-1.9.0.ebuild,
  +bzrtools-1.9.1.ebuild:
  Version bump.

*bzrtools-1.9.0 (03 Nov 2008)

  03 Nov 2008; Peter Volkov <pva@gentoo.org> +bzrtools-1.9.0.ebuild:
  Version bump.

  24 Oct 2008; Raúl Porcel <armin76@gentoo.org> bzrtools-1.6.0.ebuild,
  bzrtools-1.8.0.ebuild:
  sparc stable and add ~ia64 wrt #241740

  19 Oct 2008; Markus Meier <maekke@gentoo.org> bzrtools-1.6.0.ebuild:
  amd64/x86 stable, bug #241740

  18 Oct 2008; nixnut <nixnut@gentoo.org> bzrtools-1.6.0.ebuild: