@@ -1,10 +1,12 @@
 DIST bzrtools-1.10.0.tar.gz 69727 RMD160 d3972fba6fef72342f963bb332ec2a94a8a3b309 SHA1 9e210bcc6ba6192f58cca7076aad40c25e3f8517 SHA256 e45d55363ab2080492b59f5dff831a9448301ce0e118e6217573fa0e39cda705
 DIST bzrtools-1.11.0.tar.gz 69765 RMD160 71cd4e4f5f741dcc2e12b6b785ed6932725743ec SHA1 2b13cb2790229dd4381ee6e79765e2ace1cf98ea SHA256 1a0b257df9b5719188da022ecdb22d380bb9c7b037543e7bc205e4ec235f386b
 DIST bzrtools-1.12.0.tar.gz 69766 RMD160 db2dec8599516c2070ac6d9541263db8dcd80ee2 SHA1 0db2e98f4b51e7bb5365f984be6bd07a67ac52b7 SHA256 801c04368449464512cfd9a7a07c11fe58abf18432b66bffeec8b97b346dbc81
+DIST bzrtools-1.13.0.tar.gz 69821 RMD160 a0047ed5e4fccc92a3a0f0a07ee7ab2e2909fb1f SHA1 4a01c12177bb781fe61cbae4a5cfcf13e5c35636 SHA256 54477407db8c7e49d8a6242f5969b607c68f03a43e39c4a0ac5754052d3acba7
 DIST bzrtools-1.9.1.tar.gz 69410 RMD160 70f93e6a7940c2433ac244c0bb02d30e4e255131 SHA1 96134cbe263df4075277da325dd26f58fc4f0ea4 SHA256 611170dbd2ab5c999c845eabcb59089011b918228bc04831656fb9c89898c5ef
 EBUILD bzrtools-1.10.0.ebuild 1409 RMD160 685c996c4b45e6d452053c6b75942c36bc2f3aa5 SHA1 ed2176ab8b5475154186e2c2597dc2ccb9a061bb SHA256 b3dde9a67cde5536fc76696dbd454afd3cda19411f90d0730570717e94d50959
 EBUILD bzrtools-1.11.0.ebuild 1409 RMD160 498f174d8b1b396b2d10ca2eb2d9c77453ccb2c6 SHA1 baeb49966f9cdd81a3509f83200c90a15a827682 SHA256 8c9122e1fe7714b49002625947615c14be2fa15c7bc552abe9b29789f17442dd
 EBUILD bzrtools-1.12.0.ebuild 1438 RMD160 bba37ecabd880362bdb7b2e1cb41bfb3781f0f22 SHA1 969756498a8ca3e4b3af1939e650e722d55818d7 SHA256 428217afdd1220ae4c4feb2406fde081f7c06f1766f9a1d585aae3a71533303c
+EBUILD bzrtools-1.13.0.ebuild 1436 RMD160 e875967bd4c458c97e3dc877249a629a0b7b15ae SHA1 951df48337ef2f746ffd65fc682bb10e9dc7058f SHA256 bc3e934babb543c2d6673a482c1e76621d869cb4f00391ed4da719c803686bdb
 EBUILD bzrtools-1.9.1.ebuild 1413 RMD160 54ec36efc99fcf545b076152f56bdd33ba8008ad SHA1 fc0703a989901601e298e0fdac72491d2a77d204 SHA256 84470c367df189fe336b339fa7fe727e6edb3d028cd763b531d3082b8b40f0d8
-MISC ChangeLog 7169 RMD160 ad1c6a62bb1e21d72705c6cdec62108015beb3bb SHA1 2a87e2cf327b10462a63b910f99e387285d3216a SHA256 e9a05fc499983a419e1cbc4e66fb1e58881433865d8ad96dc9cd1c2663960975
+MISC ChangeLog 7286 RMD160 ea0f995485810af323aca75b4f93cfefb87dbe8e SHA1 163ca57ed6e8f3f994ecce01f7ad2fffca268c67 SHA256 b23b90fd3f61d2be4c77553a63f5ba4b8b3bf041d92f2c7900a8c8a488fc06f5
 MISC metadata.xml 440 RMD160 f76e519474495bf36ba78aa772336c10697d944a SHA1 29c63756b87cf1aba72b4c2ec4418b7de5292194 SHA256 c340f151793935e1381ac73c076bc91c1d7c8e7e29386aa15943e42e981000cb
