@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/bzrtools
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/bzrtools/ChangeLog,v 1.52 2009/02/20 19:14:27 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/bzrtools/ChangeLog,v 1.53 2009/03/15 06:39:41 pva Exp $
+
+*bzrtools-1.13.0 (15 Mar 2009)
+
+  15 Mar 2009; Peter Volkov <pva@gentoo.org> +bzrtools-1.13.0.ebuild:
+  Version bump.
 
   20 Feb 2009; Christian Faulhammer <fauli@gentoo.org>
   bzrtools-1.12.0.ebuild:
